--- a/styles.scss
+++ b/styles.scss
@@ -20,6 +20,12 @@
   width: 115px;
 }
 
+.range-reset {
+  top: -8px;
+  left: 8px;
+  cursor: pointer;
+}
+
 #canvas {
   //overflow-x: scroll;
 }
@@ -150,7 +156,7 @@ input[type=range].form-control {
   top: 0;
   left: 0;
   margin: 0;
-  
+
   margin-top: -1px;
   margin-left: -1px;
 
