--- a/styles.css
+++ b/styles.css
@@ -98,6 +98,44 @@ input[type='range']:focus {
 input[type=range]::-moz-focus-outer {
   border: 0; }
 
+/* Sticky footer styles
+-------------------------------------------------- */
+html {
+  position: relative;
+  min-height: 100%; }
+
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 50px; }
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 50px;
+  background-color: #f5f5f5;
+  display: flex;
+  align-items: center; }
+
+/* Custom page CSS
+-------------------------------------------------- */
+/* Not required for template or sticky footer method. */
+body > .container {
+  padding: 50px 15px 0; }
+
+.container .text-muted {
+  margin: 20px 0; }
+
+.footer > .container {
+  padding-right: 15px;
+  padding-left: 15px;
+  color: #777;
+  text-align: center; }
+
+code {
+  font-size: 80%; }
+
 .navbar-right {
   margin-right: 0px;
   float: right !important; }
@@ -235,5 +273,10 @@ input[type=range].form-control {
   left: 0;
   width: 50%;
   margin-top: -1px; }
+
+#custom-picker {
+  border: 1px solid blue;
+  width: 200px;
+  height: 200px; }
 
 /*# sourceMappingURL=styles.css.map */
