--- a/styles.scss
+++ b/styles.scss
@@ -1,4 +1,5 @@
 @import "slider.scss";
+@import "footer.scss";
 
 // Fix bootstrap
 
@@ -203,4 +204,12 @@ input[type=range].form-control {
   left: 0;
   width: 50%;
   margin-top: -1px;
+}
+
+// custom picker
+
+#custom-picker {
+  border: 1px solid blue;
+  width: 200px;
+  height: 200px;
 }
