--- a/footer.scss
+++ b/footer.scss
@@ -6,14 +6,15 @@ html {
 }
 body {
   /* Margin bottom by footer height */
-  margin-bottom: 50px;
+  margin-bottom: 80px;
 }
 .footer {
   position: absolute;
   bottom: 0;
+  padding-top: 10px;
   width: 100%;
   /* Set the fixed height of the footer here */
-  height: 50px;
+  height: 80px;
   background-color: #f5f5f5;
   display: flex;
   align-items: center;
@@ -25,7 +26,7 @@ body {
 /* Not required for template or sticky footer method. */
 
 body > .container {
-  padding: 50px 15px 0;
+  padding: 80px 15px 0;
 }
 .container .text-muted {
   margin: 20px 0;
