--- a/styles.css
+++ b/styles.css
@@ -137,6 +137,9 @@ body > .container {
 code {
   font-size: 80%; }
 
+#lch-picker {
+  min-width: 250px; }
+
 .lchPicker-component {
   display: inline-block;
   position: relative;
